# shai-hulud-detect

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  MERGE_REQUEST_COMMENT_FILTER_FIX.md  MERGE_REQUEST_PNPM_TIMESTAMP_FIX.md  README.md  compromised-packages.txt  home-scan.sh  run-detect.sh  run-tests.sh  shai-hulud-detector.sh  shai-hulud-detector.ts  shai-hulud-npm-check.sh  shai-hulud-scan.sh  workport.manifest.yaml
.github/workflows/: ci.yml  release.yml
docs/: ci-examples.md
docs/research/: codebase-analysis-2025-12-18.md
ignore-auto-load/: README.md
ignore-auto-load/.github/workflows/: shai-hulud-workflow.yml
releases/: shai-hulud-detector-v1.0.0-macos.tar.gz.sha256
releases/v1.0.0/: RELEASE_NOTES.md  install.sh  shai-hulud-detector
src/: config.rs  detector.rs  findings.rs  main.rs  report.rs  scanner.rs
test-cases/art-template-attack/: package.json
test-cases/atool-attack/: index.js  package.json
test-cases/atool-clean/: package.json
test-cases/bitwarden-attack/: package.json
test-cases/composer-crates-clean/: Cargo.toml  composer.json
test-cases/december-2025-attack/: package.json
test-cases/digit-name-package-attack/: package.json
test-cases/durabletask-attack/: pgsql-monitor.service  pyproject.toml
test-cases/easy-day-js-attack/: ioc_inert.js  package.json
test-cases/easy-day-js-clean/: package.json
test-cases/gem-clean/: Gemfile
test-cases/gitlab-false-positive/: package.json
test-cases/gitlab-false-positive/doc/api/openapi/: openapi_v2.yaml
test-cases/go-attack/: go.mod  go.sum
test-cases/go-clean/: go.mod
test-cases/hades-miasma-pypi-attack/: hades_iocs_inert.py  requirements.txt
test-cases/hades-miasma-pypi-clean/: requirements.txt
test-cases/hex-clean/: mix.exs
test-cases/ironworm-attack/: ioc_inert.js  package.json
test-cases/ironworm-clean/: package.json
test-cases/laravel-lang-attack/: composer.json
test-cases/leoplatform-miasma-attack/: ioc_inert.js  package.json
test-cases/leoplatform-miasma-clean/: package.json
test-cases/malware-slop-attack/: deploy-sync.js  package.json
test-cases/megalodon-attack/: package.json
test-cases/megalodon-attack/.github/workflows/: ci.yml
test-cases/miasma-binding-gyp-attack/: package.json
test-cases/miasma-binding-gyp-clean/: package.json
test-cases/mini-shai-hulud-dead-mans-switch/: com.user.gh-token-monitor.plist  com.user.kitty-monitor.plist  gh-token-monitor.sh  kitty-monitor.sh  package.json
test-cases/mini-shai-hulud-dead-mans-switch/kitty/: cat.py
test-cases/node-ipc-attack/: package.json
test-cases/november-2025-attack/: actionsSecrets.json
test-cases/nx-console-attack/: extension-fingerprint.js
test-cases/paranoid-confusable-fp/: package.json
test-cases/polyglot-attack/: package.json  pyproject.toml
test-cases/polyglot-elixir-infected-js/: mix.exs
test-cases/polyglot-elixir-infected-js/assets/: package.json
test-cases/polyglot-go-infected-js/: go.mod
test-cases/polyglot-go-infected-js/web/: package.json
test-cases/polyglot-ruby-infected-js/: Gemfile
test-cases/polyglot-ruby-infected-js/app/javascript/: package.json
test-cases/polymarket-attack/: package.json  postinstall-trace.js
test-cases/polymarket-attack/.polybot/: wallets.json
test-cases/pypi-attack-poetry/: pyproject.toml
test-cases/pypi-attack-requirements/: requirements.txt
test-cases/pypi-clean/: pyproject.toml  requirements.txt
test-cases/redhat-miasma-attack/: package.json
test-cases/redhat-miasma-clean/: package.json
test-cases/sl4x0-attack/: package.json
test-cases/tanstack-attack/: package.json  router_init.js
test-cases/tanstack-clean/: package.json
test-cases/trapdoor-attack/: .cursorrules  Cargo.toml  package.json  requirements.txt
test-cases/web3-mcp-attack/: package.json  postinstall-trace.js
