[package]
name = "shai-hulud-detector"
version = "1.0.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Shai-Hulud NPM Supply Chain Attack Detection Tool"
license = "MIT"
repository = "https://github.com/yourusername/shai-hulud-detector"
keywords = ["security", "npm", "supply-chain", "malware-detection"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "shai-hulud-detector"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.0"
reqwest = { version = "0.11", features = ["blocking"] }
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
rayon = "1.8"

[dev-dependencies]
tempfile = "3.8"
