# TEST FIXTURE - PEP 621 style. Polyglot project that runs the JS UI
# (see package.json) alongside a Python backend with a compromised mistralai pin.
[project]
name = "polyglot-attack-test"
version = "0.0.1"
description = "Polyglot project test fixture"
requires-python = ">=3.11"
dependencies = [
    "mistralai==2.4.6",
    "fastapi==0.110.0",
    "uvicorn==0.27.1"
]
